Created new class called Pillanguc, Default settings, html selectors.

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,8 +6,14 @@
         <title>Pillanguc Examples</title>
 		<script type="text/javascript" src="jquery-1.4.3.min.js"></script>
 		<script type="text/javascript" src="../pillanguc/jquery-pillanguc.js"></script>
+		<script type="text/javascript" src="../pillanguc/themes/default/default.js"></script>
+		<script type="text/javascript">
+		 	
+		</script>
     </head>
     <body>
         <h1>Pillanguc Examples</h1>
+		<a href="ajax.html" cache="true" title="a" close="false" hozmur="pillanguc">Test</a>
+		<div id="demo" style="display:none;">Demo Test</div>
     </body>
 </html>
